--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,9 +26,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets{
-        main{
-            jniLibs.srcDirs= ['libs']
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
         }
     }
 }
@@ -38,28 +38,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:22.2.1'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.android.support:support-v4:22.2.1'
-    compile 'com.android.support:recyclerview-v7:22.2.1'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
-    compile 'com.google.code.gson:gson:2.7'
-    compile 'io.reactivex:rxjava:1.1.0'
-    compile 'io.reactivex:rxandroid:1.1.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9+'
-    compile 'com.jakewharton:butterknife:8.4.0'
-    compile 'com.android.support:design:22.2.1'
-    compile 'com.jakewharton.timber:timber:2.4.2'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
-    compile 'com.squareup.okhttp3:okhttp-urlconnection:3.2.0'
-    compile 'com.github.franmontiel:PersistentCookieJar:v1.0.0'
     // compile 'com.lzy.widget:imagepicker:0.3.2+'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    testCompile 'junit:junit:4.12'
-    apt 'com.jakewharton:butterknife-compiler:8.4.0'
     compile files('libs/avoscloud-sdk-v3.13.15.jar')
     compile files('libs/avoscloud-statistics-v3.13.15.jar')
     compile files('libs/libammsdk.jar')
@@ -71,7 +50,6 @@ dependencies {
     compile files('libs/weiboSDKCore_3.1.4.jar')
     // for weibo login & share
     compile files('libs/alipaySdk-20161009.jar')
-    compile 'com.larswerkman:HoloColorPicker:1.5'
     compile files('libs/AMap_Search_V3.6.1_20161122.jar')
     compile files('libs/jcore-android_v1.0.0.jar')
     compile files('libs/jpush-android_v3.0.0.jar')
@@ -79,7 +57,29 @@ dependencies {
     compile files('libs/okhttp-2.6.0-leancloud.jar')
     compile files('libs/okio-1.6.0-leancloud.jar')
     compile files('libs/httpmime-4.2.4.jar')
-    compile 'org.litepal.android:core:1.4.1'
     compile files('libs/galaxy-v2.0.jar')
     compile files('libs/com.baidu.tts_2.2.9.20161020_154fa02_release.jar')
+    compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.android.support:support-v4:22.2.1'
+    compile 'com.android.support:recyclerview-v7:22.2.1'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.google.code.gson:gson:2.7'
+    compile 'io.reactivex:rxjava:1.1.0'
+    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
+    compile 'com.jakewharton:butterknife:8.4.0'
+    compile 'com.android.support:design:22.2.1'
+    compile 'com.jakewharton.timber:timber:2.4.2'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    compile 'com.squareup.okhttp3:okhttp-urlconnection:3.2.0'
+    compile 'com.github.franmontiel:PersistentCookieJar:v1.0.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.larswerkman:HoloColorPicker:1.5'
+    compile 'org.litepal.android:core:1.4.1'
+    testCompile 'junit:junit:4.12'
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
 }
